# pomodoro-time

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  alembic.ini  dependency.py  docker-compose.test.yml  docker-compose.yml  exception.py  gunicorn.conf.py  pyproject.toml  settings.py
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 2025_06_12_1253-c7ec92c6a62a_init.py  2025_06_17_1124-a67b2f3814cf_auth.py  2025_06_18_1116-ddeb3a42bcad_pass_hash.py  2025_06_18_1507-71ea2336acdd_update_user_profile.py  2025_06_18_1546-033ae3f423c3_update_user_profile2.py  2025_06_18_1554-918c4cc4ef51_update_user_del_googletoken.py
app/: consumer.py  dependency.py  main.py  settings.py
app/broker/: consumer.py  producer.py
app/clients/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  users.py
app/infrastructure/broker/: accessor.py
app/infrastructure/cache/: accessor.py
app/models/: tasks.py
app/repository/: cache_task.py  task.py  user.py
app/schemas/: __init__.py  auth.py  user.py
app/service/: auth.py  task.py  user.py
app/tasks/: handlers.py  schema.py  service.py
cache/: accessor.py
clients/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py  database.py
handlers/: __init__.py  auth.py  tasks.py  users.py
models/: tasks.py  user.py
repository/: cache_task.py  task.py  user.py
schemas/: __init__.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py  settings.py
worker/: celery.py
(+22 files in other folders)
