[tool.poetry]
name = "pomodoro-time"
version = "0.1.0"
description = ""
authors = ["Vitali Maisiuk <vitali.maisiuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"
psycopg2 = "^2.9.10"
redis = "^6.2.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
uvicorn = "^0.34.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.32.4"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
greenlet = "^3.2.3"
gunicorn = "^23.0.0"
uvicorn-worker = "^0.3.0"
pytest = "^8.4.1"
twisted = "^25.5.0"
pytest-asyncio = "^1.0.0"
pytest-factoryboy = "^2.8.0"
celery = "^5.5.3"
flower = "^2.0.1"
aio-pika = "^9.5.5"
aiokafka = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length=120

[tool.ruff]
line-length=120